# LLM-based-Medical-Case-Triage-Escalation-Support

./: Dockerfile_mlflow  Makefile  README.md  docker-compose.airflow.yaml  docker-compose.api.yaml  docker-compose.ci.yaml  docker-compose.ml.yaml  docker-compose.monitoring.yaml  docker-compose.portainer.yaml  pyproject.toml
.dvc/: config
data/data_generic/: escalation_dataset_v2.csv.dvc  reports_clear.json.dvc
data_generic/: reports_ambiguous.csv.dvc  reports_ambiguous.json.dvc  reports_clear.csv.dvc
models/: LogReg_OHE.joblib  LogReg_OHE_v1.joblib
monitoring/: cAdvisor_metrics.md
monitoring/loki/: loki.yaml
monitoring/prometheus/: prometheus.yaml
monitoring/promtail/: promtail.yaml
notebooks/: 0_EDA_escalate_reports.ipynb  data_eda.ipynb  test.ipynb
scripts/: 0_setup_mlflow.sh  create_experiment.sh  setup_terraform.sh
src/: A_report_escalation.py  B1_rule_escalation.py  B2_llm_escalation.py  C2_train_logreg.py  C3_HyperOpt_logreg.py  C_llm_postprocess.py  D1_evaluation.py  D2_single_run.py  D3_group_split_cv.py  D3_shuffle_split_cv.py  D4_.py  D4_group_aware_cv.py  D4_hyper_opt.py  D_evaluation.py  LLM_test.py  clear_llm_cache.py  create_mlflow_fingerprint.py  create_report.py  escalation_check.py  hide_runs.py  manual_logging.py  mlflow_setup_test.py  update_tags.py
src/configuration/: A_llm_baseline.py  A_rule_baseline.py  B1_llm_post.py  B3_llm_post.py  B4_llm_post.py  C1_logreg_base.py  C2_logreg_base_group_shuffle.py  C2_logreg_base_shuflle_split_cv.py  C3_logreg_base_group_kfold.py  C3_logreg_base_stratify_split_cv.py  C4_logreg_HyperOpt.py  (+4 more)
(+59 files in other folders)
